--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <div class="box">
 
       <img src="https://github.com/sagamantus.png" alt="" class="box-img" />
-      <h1>sagamantus</h1>
+      <h2>sagamantus</h2>
       <h3>Programming Enthusiast</h3>
-      <p>Hello There! I am a Programming Enthusiast. I love playing around with code. Python was my first language.
-         I love being with people who have similar interest in programming.
+      <p>
+        Hello There! I am a Programming Enthusiast. I love playing around with code. 
+        Python is my first programming language. 
+        I love being with people who have similar interest in programming.
       </p>
       <p><q style="text-align:left">Declare <strong>war</strong> variable.</q> 
         <br /> <a href="https://github.com/harkred">- A thoughtful friend of mine. </a>
@@ -33,17 +35,16 @@
 
       <ul>
         <li>
-            <a href="https://github.com/sagamantus">
-                <i class="fa fa-github"></i>
-            </a>
+          <a href="https://github.com/sagamantus">
+            <i class="fa fa-github"></i>
+          </a>
         </li>
 
         <li>
-            <a href="https://open.spotify.com/user/uke75dxjvtsgat4hv4eamcsug?si=7cfd96a9942a49e5">
-                <i class="fa fa-spotify"></i>
-            </a>
+          <a href="https://open.spotify.com/user/uke75dxjvtsgat4hv4eamcsug?si=7cfd96a9942a49e5">
+            <i class="fa fa-spotify"></i>
+          </a>
         </li>
-
         
       </ul>
 
