Added page icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="sagamantus">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0">
 
+    <link rel="icon" href="https://github.com/sagamantus.png" type="image/gif" sizes="16x16">
+
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="stylesheet" href="style.css" />
 
